--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,15 @@
       "homepage": "http://www.moelleken.org/"
     }
   ],
+  "repositories": {
+    "simple_html_dom": {
+      "type": "vcs",
+      "url": "https://github.com/menadwork/simple_html_dom"
+    }
+  },
   "require": {
     "php": ">=5.3.0",
-    "voku/simple_html_dom": "~3.1"
+    "simple_html_dom": "~3.1"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0|~5.0"
